--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "private": true,
     "scripts": {
-        "start": "react-scripts --openssl-legacy-provider start",
-     "build": "react-scripts --openssl-legacy-provider build",
+        "start": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+        "build": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
         "dev": "npm run development",
         "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
         "watch": "npm run development -- --watch",
