--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
     "private": true,
     "scripts": {
-        "dev":"SET NODE_OPTIONS=--openssl-legacy-provider && nuxt",
-        "build":"SET NODE_OPTIONS=--openssl-legacy-provider && nuxt build",
-        "start":"SET NODE_OPTIONS=--openssl-legacy-provider && nuxt start",
-        "generate":"SET NODE_OPTIONS=--openssl-legacy-provider && nuxt generate",
+        "dev": "npm run development",
         "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
         "watch": "npm run development -- --watch",
         "watch-poll": "npm run watch -- --watch-poll",
