--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
     "private": true,
     "scripts": {
+        "start": "react-scripts --openssl-legacy-provider start",
+        "build": "react-scripts --openssl-legacy-provider build",
+        "android": "cross-env NODE_OPTIONS=--openssl-legacy-provider expo start --android",
+        "ios": "cross-env NODE_OPTIONS=--openssl-legacy-provider expo start --ios",
+        "web": "cross-env NODE_OPTIONS=--openssl-legacy-provider expo start --web",
         "dev": "npm run development",
         "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
         "watch": "npm run development -- --watch",
