--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
         "lodash": "^4.17.19",
         "resolve-url-loader": "^3.1.0",
         "vue-template-compiler": "^2.7.14"
+    },
+    "dependencies": {
+        "react-scripts": "^5.0.1"
     }
 }
